--- a/Simple_NN.ipynb
+++ b/Simple_NN.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Simple NN.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyPe3VHPs3C1p3fn4gBin8w8",
       "include_colab_link": true
     },
@@ -41,7 +42,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +63,7 @@
         "def activation(x):\n",
         "    return 1 / (1 + np.exp(-x))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +83,7 @@
       "source": [
         "weights = np.random.uniform(-1,1,size = (2, 1))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +105,7 @@
         "training_inputs = np.array([[0, 0, 1, 1, 0, 1]]).reshape(3, 2)\n",
         "training_outputs = np.array([[0, 1, 1]]).reshape(3,1)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,7 +133,7 @@
         "    # 0.5 is the learning rate.\n",
         "    weights = weights - 0.5 * adj"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +161,7 @@
         "# OR of 1, 0 is 1\n",
         "print(test_output)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
